<resources>
    <string name="app_name">KahootCID</string>
    <string name="credit">By @idiidk</string>
    <string name="pin">Pin</string>
    <string name="name">Name</string>
    <string name="test_session">log in</string>

    <string name="game_not_found">Sorry, a game with that pin was not found!</string>
    <string name="game_error">Sorry, an error occured parsing the game\'s data!</string>

    <string name="preference_file_key">kahoot</string>
</resources>
